# predictml-api

./: .claudeignore  .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  CODE_QUALITY_PLAN.md  CODING_STANDARDS.md  CONTRIBUTING.md  Dockerfile  Ideas from perplexity   MEMO.md  PROMPTS.md  README.md  ROADMAP.md  ROADMAP_SECURITY.md  ROADMAP_V10.md  ROADMAP_V12.md  ROADMAP_V14.md  ROADMAP_V3.md  ROADMAP_V5.md  ROADMAP_V8.md  ROADMAP_V9.md  SKILLS.md  TRANSLATION_PROGRESS.md  alembic.ini  docker-compose-anti-spof.yml  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  ideas.md  nginx.conf  notebook_requirements.txt  pyproject.toml  redis-sentinel.conf  requirements.txt  roadmap_scalabilty_n2.md
Models/: README.md
alembic/: env.py
docker/: haproxy-postgres.cfg  keepalived-backup.conf  keepalived-master.conf  minio-nginx.conf  mlflow-entrypoint.sh  pg_hba.conf  postgres-replica-entrypoint.sh  sentinel-entrypoint.sh
documentation/: ALERTING.md  API_REFERENCE.md  ARCHITECTURE.md  AUTO_PROMOTION.md  BEGINNER_GUIDE.md  CIRCUIT_BREAKER.md  DASHBOARD_GUIDE.md  DATABASE.md  DOCKER.md  FAQ.md  GRAFANA_OTEL.md  KPIS_REFERENCE.md  QUICKSTART.md  SECURITY_MODEL_VALIDATION.md  TRAIN_SCRIPT_GUIDE.md
init_data/: README.md  create_mlflow_db.sql  create_multiple_advanced_models.py  create_multiple_models.py  example_train.py  init_db.py  migrate_add_feature_baseline.py  resign_models.py  seed_sample_data.py
monitoring/: prometheus.yml  prometheus.yml.template  promtail-config.yaml
notebooks/: database_analysis.ipynb  dataset_storage_example.ipynb  loan_model_training.ipynb
road_maps/: RECETTE_20062026.md  ROADMAP.md  ROADMAP_4_PERPLEXITY.md  ROADMAP_SECURITY.md  ROADMAP_Scalability.md  ROADMAP_V11.md  ROADMAP_V13.md  ROADMAP_V15.md  ROADMAP_V4.md  ROADMAP_V5.md  ROADMAP_V6.md  ROADMAP_V7.md  ROADMAP_V8.md  ideas.md  roadmap_scalabilty_n2.md
scripts/: init_env.sh
smoke-tests/: README.md  test_multimodel_api.py
src/: __init__.py  main.py
streamlit_app/: Dockerfile  app.py  requirements.txt
tests/: conftest.py  test_ab_shadow.py  test_ab_significance.py  test_account_requests.py  test_alert_check_logs.py  test_alert_thresholds.py  test_api.py  test_audit_logging.py  test_auto_promotion_policy.py  test_calibration.py  test_compute_baseline.py  test_confidence_distribution.py  test_confidence_trend_extended.py  test_config.py  test_core_telemetry.py  test_core_utils.py  test_csv_upload_observed_results.py  test_database.py  test_db_service_crud.py  test_db_service_monitoring.py  test_db_service_monitoring_extended.py  test_drift.py  test_email_service.py  test_explain.py  test_explain_by_id.py  test_export_endpoint.py  test_feature_importance.py  test_golden_test_service_unit.py  test_golden_tests.py  test_input_validation.py  test_main_health_deps.py  test_main_lifespan.py  test_main_security_headers.py  test_metrics_endpoint.py  test_minio_service.py  test_mlflow_service.py  test_mlflow_service_edge_cases.py  test_model_card.py  (+49 more)
(+193 files in other folders)
