[project]
name = "predictML"
version = "2.0.0"
description = "API REST pour prédictions avec plusieurs modèles scikit-learn"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "scikit-learn>=1.6.0",
    "numpy>=2.0.0",
    "scipy>=1.11.0",
    "pydantic>=2.9.2",
    "python-multipart>=0.0.12",
    "python-dotenv>=1.0.0",
    "mlflow>=2.0.0",
    "email-validator>=2.0.0",
    "shap>=0.46.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-instrumentation-logging>=0.48b0",
    "structlog>=24.0.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
    "requests>=2.32.0",
    "fakeredis>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning:mlflow",
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
]

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
known-third-party = ["alembic"]
